[web] Fix input alignment with checkbox prefix

--- a/node/www/css/style.less
+++ b/node/www/css/style.less
@@ -429,7 +429,7 @@ body
 
 .checkbox_addon .field
 {
-    width:      177px;
+    width:      173px;
 }
 
 .sidebar
